P3/test/pl0/error/error21.pl0
var a;

procedure b;
begin
end.

begin
	a:=b;
end.
